Changed text on clear selection button to only show category name on selection; fix overflow issues with button

--- a/src/css/finder.less
+++ b/src/css/finder.less
@@ -216,6 +216,7 @@ html {
 
   #allServicesButton {
     width: 100%;
+    overflow: hidden;
   }
 
   .dropdown-menu {
